--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h2>Registration Form</h2>
+    <h3>Please fill the details </h3>
     <form id="registrationForm" onsubmit="return validateForm();">
       <div>
         Name: <br />
