--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h2>Registration Form</h2>
+    <h2>Registration page</h2>
     <form id="registrationForm" onsubmit="return validateForm();">
       <div>
         Name: <br />
