--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
     <script src="script.js"></script>
   </head>
   <body>
-<<<<<<< HEAD
-    <h2>Registration form</h2>
-=======
-    <h2>Registration page</h2>
-    <h3>Please fill the detials</h3>
->>>>>>> d050c7e (file updated)
+
+    <h2>LOGIN PAGE</h2>
     <form id="registrationForm" onsubmit="return validateForm();">
       <div>
         Name: <br />
